--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fast-git-changelog",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "fast & simple changelog generator from git repository",
 	"main": "index.js",
 	"preferGlobal": true,
@@ -26,7 +26,7 @@
 		"clear": "0.1.0",
 		"clui": "^0.3.6",
 		"figlet": "^1.5.2",
-		"moment-timezone": "^0.5.38",
+		"dayjs": "^1.11.5",
 		"underscore": "^1.13.6",
 		"underscore.string": "^3.3.6"
 	}
