--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"name": "fast-git-changelog",
 	"version": "1.0.4",
 	"description": "fast & simple changelog generator from git repository",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"preferGlobal": true,
+	"scripts": {
+		"build": "tsc"
+	},
 	"bin": {
-		"fast-git-changelog": "index.js",
-		"fgc": "index.js"
+		"fast-git-changelog": "dist/index.js",
+		"fgc": "dist/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -25,8 +28,15 @@
 		"chalk": "^4.1.2",
 		"clear": "0.1.0",
 		"clui": "^0.3.6",
-		"figlet": "^1.5.2",
 		"dayjs": "^1.11.5",
+		"figlet": "^1.5.2",
 		"lodash": "^4.17.21"
+	},
+	"devDependencies": {
+		"@types/clear": "^0.1.2",
+		"@types/clui": "^0.3.1",
+		"@types/lodash": "^4.14.186",
+		"@types/node": "^18.11.2",
+		"typescript": "^4.8.4"
 	}
 }
